@@ -8,8 +8,6 @@ Key:
 v0.5dev (ongoing development)
  - Remove deprecated CFontz633 driver. Use CFontzPacket with Model=633 instead!
  + new driver: glcd unified graphic display driver (M. Dolze)
- * curses: Fix missed keystrokes (from Debian)
- * curses: Correct the name of the info function.
  + new driver: vlsys_m428 driver for Moneual MonCaso 320 (W. Hauck)
  * hd44780/serial: Fix handling of keys for LoS-Panel (M. Kirchner)
  * hd44780/serial: Change backlight handling (see commit message)
@@ -47,6 +45,10 @@ v0.5.5
  + Build system: --enable-extra-charmaps option adds language specific charmaps
  * imonlcd: Fix spinning of disc icon (E. Pooch)
  * SureElec: Change port initialization (SF 3212891)
+ * curses: Fix missed keystrokes (from Debian)
+ * curses: Correct the name of the info function.
+ * Update LCDd.conf to be better understood by Config::Model (D. Dumont)
+ * CFontz: Fix display of bars
 
 v0.5.4
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
